# micropython-ili9341-xpt2046

./: LICENSE  README.md  manifest.py  package.json  pyproject.toml
examples/: basic_ili9341_xpt2046.py
src/ili9341_xpt2046/: __init__.py
src/ili9341_xpt2046/display/: __init__.py  display.py
src/ili9341_xpt2046/display/drivers/: __init__.py  gc9a01.py  ili9341.py  st7789.py
src/ili9341_xpt2046/display/fonts/: __init__.py
src/ili9341_xpt2046/display/mixins/: __init__.py  blit.py  clipping.py  geometry.py  text.py  transform.py
src/ili9341_xpt2046/input/: __init__.py  touch.py  xpt2046.py
tests/: test_smoke.py
